--- a/sass/locals/_typography.sass
+++ b/sass/locals/_typography.sass
@@ -22,6 +22,7 @@ h1
 .row h1.heading
     font-size: emCalc(24px)
     margin: emCalc(20px) 0 emCalc(20px) 0
+    white-space: nowrap
 
 .row.shadow
     //-webkit-box-shadow: inset 0px 0px 5px 1px rgba(0, 0, 0, .2)
